--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="grid place-items-center p-8">
-  
+  <body class="">
+    <section></section>
 
     <script type="module" src="./main.js"></script>
   </body>
