--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body class="">
-    <section></section>
+    <section>jkdbwqb</section>
 
     <script type="module" src="./main.js"></script>
   </body>
