--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
     <title>Vite App</title>
   </head>
   <body class="">
-    <section>jkqwlkndiwb</section>
+    <section>
+      <article>
+        <div>
+          <h1>Uperfekt er perfekt</h1>
+        </div>
+      </article>
+    </section>
 
     <script type="module" src="./main.js"></script>
   </body>
