--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,17 @@
   </head>
   <body class="">
     <section class="section1">
-      <div>
-        <h1>Uperfekt er perfekt</h1>
-      </div>
-      <div>
-        <img src="" alt="" />
+      <div class="container min-w-fit">
+        <img src="img/heroimg.webp" alt="hero_img" />
+        <div class="centered">Uperfekt er perfekt</div>
       </div>
     </section>
 
     <section class="section2">
       <h2>Pierre Falcke.</h2>
-      <img src="" alt="" />
+      <div>
+        <img src="" alt="" />
+      </div>
       <h3>Du ved formenligt ikke hvem han er.</h3>
       <p>
         Men indtil for kort tid siden, så du hans værker et par gange om dagen,
