--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </section>
 
     <section class="section2">
-      <h2>Pierre Falcke.</h2>
+      <h2>Pierre Falcke</h2>
       <img src="" alt="" />
       <h3>Du ved formenligt ikke hvem han er.</h3>
       <p>
@@ -55,7 +55,7 @@
     </section>
 
     <section class="section3">
-      <h2>Pierres berømmelse.</h2>
+      <h2>Pierres berømmelse</h2>
       <p>
         Pierres interesse for foto startede som ganske ung - som 10-årig fik han
         sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var før den
@@ -88,7 +88,7 @@
     </section>
 
     <section class="section4">
-      <h2>En skillevej.</h2>
+      <h2>En skillevej</h2>
       <p>
         Pierre tjente godt det følgende årti. Men stille og roligt begyndte
         billederne også at give ham kvalme. Han kunne ikke holde sit eget
