--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,12 @@
     </section>
 
     <section class="section2">
-      <h2>Pierre Falcke.</h2>
+      <h2>Pierre Falcke</h2>
       <div>
         <img src="" alt="" />
       </div>
-      <h3>Du ved formenligt ikke hvem han er.</h3>
-      <p>
+      <h3>Du ved formenligt ikke hvem han er</h3>
+      <p class="font-Parafont">
         Men indtil for kort tid siden, så du hans værker et par gange om dagen,
         hver dag, året rundt. Pierre Falcke var en af verdens bedst sælgende
         stock-fotografer, og han solgte over 2 millioner fotos om året. Men
@@ -61,7 +61,7 @@
     </section>
 
     <section class="section3">
-      <h2>Pierres berømmelse.</h2>
+      <h2>Pierres berømmelse</h2>
       <p>
         Pierres interesse for foto startede som ganske ung - som 10-årig fik han
         sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var før den
@@ -94,7 +94,7 @@
     </section>
 
     <section class="section4">
-      <h2>En skillevej.</h2>
+      <h2>En skillevej</h2>
       <p>
         Pierre tjente godt det følgende årti. Men stille og roligt begyndte
         billederne også at give ham kvalme. Han kunne ikke holde sit eget
