--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
 
     <section class="section2">
       <h2>Pierre Falcke</h2>
-      <div>
-        <img src="" alt="" />
+      <div class="container min-w-fit">
+        <img src="img/pierre.webp" alt="pierre" />
       </div>
       <h3>Du ved formenligt ikke hvem han er</h3>
       <p class="font-Parafont">
@@ -39,7 +39,7 @@
     </section>
 
     <section class="section2">
-      <img src="" alt="" />
+      <img src="img/stockimg.webp" alt="stock-img" />
       <p>
         Stock-fotos er billeder, der kan købes fra et foto-website. De bruges af
         aviser, til markedsføring og som indhold på websites. En licens til at
@@ -69,7 +69,7 @@
         og fremkaldelse af film. Pierre fortsatte med at fotografere på film op
         gennem gymnasietiden.
       </p>
-      <img src="" alt="" />
+      <img src="img/pierre-2.webp" alt="pierre-2" />
       <p>
         Pierre over til digital fotografering i starten af 2000’erne, da han
         begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en ny
@@ -102,8 +102,10 @@
         Noget han kunne lave med stolthed. Pierre bestluttede sig for at droppe
         stock-fotos, og vende tilbage til rødderne.
       </p>
-      <img src="" alt="" />
-      <img src="" alt="" />
+      <div class="grid grid-cols-2">
+        <img src="img/enskillevej1.webp" alt="img1" />
+        <img src="img/enskillevej2.webp" alt="img2" />
+      </div>
       <p>
         Han søgte inspiration i analog fotografering, i Lomo-bevægelsen, Glitch
         art og polaroid fotografering, og begyndte stille og roligt at skabe sig
@@ -116,16 +118,16 @@
         solgte sine fotos hos. Han gik fra at være en god forretningsdrivende
         til at blive en vaskeægte boheme-type på rekordtid.
       </p>
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
+      <img src="img/slide1.webp" alt="slide1" />
+      <img src="img/silde2.webp" alt="slide2" />
+      <img src="img/slide3.webp" alt="slide3" />
+      <img src="img/slide4.webp" alt="slide4" />
+      <img src="img/slide5.webp" alt="slide5" />
     </section>
 
     <section class="section4">
       <div>
-        <img src="" alt="" />
+        <img src="img/infoanalog.webp" alt="info" />
         <h3>Analog fotografering</h3>
         <p>
           Fotografering med gode, gammeldags filmruller. Analog fotografering
@@ -143,7 +145,7 @@
         </p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="img/glitch.webp" alt="glitch" />
         <h3>Glitch art</h3>
         <p>
           Når der sker en teknisk fejl i et medie/en kommunikationskanal kaldes
@@ -153,7 +155,7 @@
         </p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="img/lomografi.webp" alt="lomo" />
         <h3>Lomografi</h3>
         <p>
           Et lomografi er egentlig bare et fotografi skudt uden videre omtanke,
