--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,31 @@
     <title>Pierre Falcke</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
-  <body class="">
+  <body class="[&_h2]:text-main_color">
     <section class="section1">
       <div class="container min-w-fit">
-        <img src="img/heroimg.webp" alt="hero_img" />
-        <div class="centered">Uperfekt er perfekt</div>
+        <img src="img/heroimg.webp" alt="hero_img" class="h-screen w-screen" />
+        <h1 class="centered text-5xl font-extrabold text-h1">
+          Uperfekt er perfekt
+        </h1>
       </div>
     </section>
 
     <section class="section2">
-      <h2>Pierre Falcke</h2>
+      <h2 class="mt-96 mb-96 text-center text-4xl font-bold">Pierre Falcke</h2>
       <div class="container min-w-fit">
-        <img src="img/pierre.webp" alt="pierre" />
+        <img src="img/pierre.webp" alt="pierre" class="w-screen" />
       </div>
       <h3>Du ved formenligt ikke hvem han er</h3>
-      <p class="font-Parafont">
+      <p class="font-parafont">
         Men indtil for kort tid siden, så du hans værker et par gange om dagen,
         hver dag, året rundt. Pierre Falcke var en af verdens bedst sælgende
         stock-fotografer, og han solgte over 2 millioner fotos om året. Men
