--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,16 @@
 
       <!-- section 2-->
       <section>
-        <h2 class="mt-96 mb-96 text-center text-4xl font-bold">
+        <h2 class="h-screen w-screen text-center text-4xl font-bold">
           Pierre Falcke
         </h2>
+
         <div class="container min-w-fit">
-          <img src="img/pierre.webp" alt="pierre" class="w-screen" />
+          <img src="img/pierre.webp" alt="hero_img" class="h-screen w-screen" />
+          <h3 class="low text-3xl font-extrabold text-beige">
+            Du ved formentligt ikke hvem han er
+          </h3>
         </div>
-        <h3>Du ved formenligt ikke hvem han er</h3>
         <p class="font-parafont">
           Men indtil for kort tid siden, så du hans værker et par gange om
           dagen, hver dag, året rundt. Pierre Falcke var en af verdens bedst
