--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,9 @@
       </section>
 
       <!-- section 4-->
-      <section class="section4">
-        <h2>Pierres berømmelse</h2>
-        <p>
+      <section>
+        <h2 class="w-screen h-screen text-center text-4xl font-bold">Pierres berømmelse</h2>
+        <p class="text-beige max-w-prose">
           Pierres interesse for foto startede som ganske ung - som 10-årig fik
           han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
           før den digitale revolution, så alle Pierres lommepenge blev brugt på
