--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
-  <body class="[&_h2]:text-beige">
+  <body class="[&_h2]:text-beige [&_p]:mx-44">
     <div class="bg-brun">
       <!-- section 1-->
       <section>
@@ -54,6 +54,10 @@
 
       <!-- section 3-->
       <section>
+        
+        <div class=" h-screen w-screen">
+        <h3 class=" text-gul text-3xl border-2 border-solid border-gul">Hvad er stock-fotos?</h3>
+      </div>
         <img src="img/stockimg.webp" alt="stock-img" />
         <p>
           Stock-fotos er billeder, der kan købes fra et foto-website. De bruges
