--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
-  <body class="[&_h2]:text-beige [&_p]:mx-44">
+  <body class="[&_h2]:text-beige [&_p]:mx-44 [&_p]:px-72">
     <div class="bg-brun">
       <!-- section 1-->
       <section>
