--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
-  <body class="[&_h2]:text-beige [&_p]:mx-44 [&_p]:px-72">
+  <body
+    class="[&_h2]:text-beige [&_p]:mx-44 [&_p]:px-72 [&_li]:mx-44 [&_li]:px-72"
+  >
     <div class="bg-brun">
       <!-- section 1-->
       <section>
@@ -33,34 +35,41 @@
 
       <!-- section 2-->
       <section>
-        <h2 class="h-screen w-screen text-center text-4xl font-bold">
-          Pierre Falcke
-        </h2>
+        <div class="grid h-screen w-screen place-content-center">
+          <h2 class="text-4xl font-bold">Pierre Falcke</h2>
+        </div>
 
         <div class="container min-w-fit">
           <img src="img/pierre.webp" alt="hero_img" class="h-screen w-screen" />
-          <h3 class="low text-3xl font-extrabold text-beige">
+          <h3 class="low text-3xl font-extrabold text-gul">
             Du ved formentligt ikke hvem han er
           </h3>
         </div>
-        <p class="font-parafont">
-          Men indtil for kort tid siden, så du hans værker et par gange om
-          dagen, hver dag, året rundt. Pierre Falcke var en af verdens bedst
-          sælgende stock-fotografer, og han solgte over 2 millioner fotos om
-          året. Men Pierre kunne ikke drømme om at bruge sine egne fotos -
-          faktisk kan han ikke fordrage sit eget arbejde.
-        </p>
-        <h3>Pierre sælger 2 millioner fotos om året.</h3>
-        <h3>Det svarer til én fotolicens hvert 16. sekund.</h3>
-        <h3>Du ser hans fotos ca. 2 gange om dagen.</h3>
+        <div class="grid h-screen w-screen place-content-center gap-24">
+          <p class="font-parafont text-beige">
+            Men indtil for kort tid siden, så du hans værker et par gange om
+            dagen, hver dag, året rundt. Pierre Falcke var en af verdens bedst
+            sælgende stock-fotografer, og han solgte over 2 millioner fotos om
+            året. Men Pierre kunne ikke drømme om at bruge sine egne fotos -
+            faktisk kan han ikke fordrage sit eget arbejde.
+          </p>
+          <ul
+            class="fotogalleryinview text-center text-2xl font-semibold text-gul"
+          >
+            <li>Pierre sælger 2 millioner fotos om året.</li>
+            <li>Det svarer til én fotolicens hvert 16. sekund.</li>
+            <li>Du ser hans fotos ca. 2 gange om dagen.</li>
+          </ul>
+        </div>
       </section>
 
       <!-- section 3-->
       <section>
-        
-        <div class=" h-screen w-screen">
-        <h3 class=" text-gul text-3xl border-2 border-solid border-gul">Hvad er stock-fotos?</h3>
-      </div>
+        <div class="h-screen w-screen">
+          <h3 class="border-2 border-solid border-gul text-3xl text-gul">
+            Hvad er stock-fotos?
+          </h3>
+        </div>
         <img src="img/stockimg.webp" alt="stock-img" />
         <p>
           Stock-fotos er billeder, der kan købes fra et foto-website. De bruges
@@ -84,8 +93,10 @@
 
       <!-- section 4-->
       <section>
-        <h2 class="w-screen h-screen text-center text-4xl font-bold">Pierres berømmelse</h2>
-        <p class="text-beige max-w-prose">
+        <h2 class="h-screen w-screen text-center text-4xl font-bold">
+          Pierres berømmelse
+        </h2>
+        <p class="max-w-prose text-beige">
           Pierres interesse for foto startede som ganske ung - som 10-årig fik
           han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
           før den digitale revolution, så alle Pierres lommepenge blev brugt på
