--- a/src/index.html
+++ b/src/index.html
@@ -84,16 +84,18 @@
 
       <!-- section 4-->
       <section>
-        <h2 class="w-screen h-screen text-center text-4xl font-bold">Pierres berømmelse</h2>
-        <p class="text-beige max-w-prose">
+        <div class="grid place-content-center w-screen h-screen">
+        <h2 class="text-center text-4xl font-bold">Pierres berømmelse</h2>
+      </div>
+        <p class="text-beige mb-36 leading-loose">
           Pierres interesse for foto startede som ganske ung - som 10-årig fik
           han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
           før den digitale revolution, så alle Pierres lommepenge blev brugt på
           filmruller og fremkaldelse af film. Pierre fortsatte med at
           fotografere på film op gennem gymnasietiden.
         </p>
-        <img src="img/pierre-2.webp" alt="pierre-2" />
-        <p>
+        <img src="img/pierre-2.webp" alt="pierre-2" class= "px-32" />
+        <p class="text-beige mt-32">
           Pierre over til digital fotografering i starten af 2000’erne, da han
           begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
           ny verden sig: Reklamefotografering i studie, lyssætning og
@@ -103,11 +105,11 @@
           de store, etablerede spillere på markedet holdt lidt igen. Pierre så
           det for sig:
         </p>
-        <h3>
+        <h3 class="text-beige mt-32 mb-32 text-center text-lg italic">
           “Om ganske få år er hele branchen digital, og dem der ikke hopper med
           på den digitale vogn, lukker.”
         </h3>
-        <p>
+        <p class="text-beige">
           Så Pierre gav sig selv en udfordring: At blive landets bedst sælgende
           stock-fotograf. Pierre lejede et gammelt, billigt erhvervslokale i
           Ishøj industri, fik fløjet billige skuespillere ind fra Polen og
