--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
       <!-- section 3-->
       <section>
         
-        <div class=" h-screen w-screen">
-        <h3 class=" text-gul text-3xl border-2 border-solid border-gul">Hvad er stock-fotos?</h3>
+        <div class=" grid place-content-center h-screen w-screen">
+        <h3 class=" top-1/2 text-gul text-3xl inline-block border-2 border-solid border-gul">Hvad er stock-fotos?</h3>
       </div>
         <img src="img/stockimg.webp" alt="stock-img" />
         <p>
