--- a/src/index.html
+++ b/src/index.html
@@ -76,10 +76,13 @@
 
       <!-- section 3-->
       <section>
-        
-        <div class=" grid place-content-center h-screen w-screen">
-        <h3 class=" top-1/2 text-gul text-3xl inline-block border-2 border-solid border-gul">Hvad er stock-fotos?</h3>
-      </div>
+        <div class="grid h-screen w-screen place-content-center">
+          <h3
+            class="top-1/2 inline-block border-2 border-solid border-gul text-3xl text-gul"
+          >
+            Hvad er stock-fotos?
+          </h3>
+        </div>
         <img src="img/stockimg.webp" alt="stock-img" />
         <p>
           Stock-fotos er billeder, der kan købes fra et foto-website. De bruges
@@ -103,18 +106,18 @@
 
       <!-- section 4-->
       <section>
-        <div class="grid place-content-center w-screen h-screen">
-        <h2 class="text-center text-4xl font-bold">Pierres berømmelse</h2>
-      </div>
-        <p class="text-beige mb-36 leading-loose">
+        <div class="grid h-screen w-screen place-content-center">
+          <h2 class="text-center text-4xl font-bold">Pierres berømmelse</h2>
+        </div>
+        <p class="mb-36 leading-loose text-beige">
           Pierres interesse for foto startede som ganske ung - som 10-årig fik
           han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
           før den digitale revolution, så alle Pierres lommepenge blev brugt på
           filmruller og fremkaldelse af film. Pierre fortsatte med at
           fotografere på film op gennem gymnasietiden.
         </p>
-        <img src="img/pierre-2.webp" alt="pierre-2" class= "px-32" />
-        <p class="text-beige mt-32">
+        <img src="img/pierre-2.webp" alt="pierre-2" class="px-32" />
+        <p class="mt-32 text-beige">
           Pierre over til digital fotografering i starten af 2000’erne, da han
           begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
           ny verden sig: Reklamefotografering i studie, lyssætning og
@@ -124,7 +127,7 @@
           de store, etablerede spillere på markedet holdt lidt igen. Pierre så
           det for sig:
         </p>
-        <h3 class="text-beige mt-32 mb-32 text-center text-lg italic">
+        <h3 class="mt-32 mb-32 text-center text-lg italic text-beige">
           “Om ganske få år er hele branchen digital, og dem der ikke hopper med
           på den digitale vogn, lukker.”
         </h3>
@@ -176,8 +179,8 @@
       <!-- section 6-->
       <section>
         <div>
+          <h3 class="">Analog fotografering</h3>
           <img src="img/infoanalog.webp" alt="info" />
-          <h3>Analog fotografering</h3>
           <p>
             Fotografering med gode, gammeldags filmruller. Analog fotografering
             stiger for tiden i popularitet, specielt blandt unge, og prisen på
