--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
-  
   </head>
   <body
     class="cursor-mincursor [&_h2]:text-beige [&_p]:mx-44 [&_p]:px-72 [&_li]:mx-44 [&_li]:px-72"
@@ -169,60 +168,66 @@
       <!-- section 6-->
       <section>
         <div>
-          <h3 class="">Analog fotografering</h3>
-          <img src="img/infoanalog.webp" alt="info" />
-          <p>
-            Fotografering med gode, gammeldags filmruller. Analog fotografering
-            stiger for tiden i popularitet, specielt blandt unge, og prisen på
-            filmruller og vintage-kameraer skyder i vejret. Mange fotografer
-            synes at film-fotografering er mere ægte har mere “sjæl.” Analog
-            fotografering er langsommmere, hvert enkelt billede koster penge, og
-            man bliver nødt til at overveje motiv og lys grundigere før der
-            skydes - tænk før du trykker. <br />Analog fotografering kan gå galt
-            mange steder i processen, og det giver også mulighed for at
-            eksperimentere med “det uperfekte og uforudsigelige i processen.”
-            Man kan f.eks. skyde på for gamle filmruller, arbejde med
-            forskellige teknikker som “lens whacking” og filtre/ting foran
-            objektivet, og man kan pille ved de kemiske processer under
-            fremkaldelse af filmen.
-          </p>
-        </div>
-        <div>
-          <img src="img/glitch.webp" alt="glitch" />
+          <div>
+            <h3 class="mx-auto w-1/2 p-10 text-xl">Analog fotografering</h3>
+            <div class="w-100 sticky top-0 flex h-screen items-center">
+              <img src="img/infoanalog.webp" alt="info" />
+            </div>
+            <p>
+              Fotografering med gode, gammeldags filmruller. Analog
+              fotografering stiger for tiden i popularitet, specielt blandt
+              unge, og prisen på filmruller og vintage-kameraer skyder i vejret.
+              Mange fotografer synes at film-fotografering er mere ægte har mere
+              “sjæl.” Analog fotografering er langsommmere, hvert enkelt billede
+              koster penge, og man bliver nødt til at overveje motiv og lys
+              grundigere før der skydes - tænk før du trykker. <br />Analog
+              fotografering kan gå galt mange steder i processen, og det giver
+              også mulighed for at eksperimentere med “det uperfekte og
+              uforudsigelige i processen.” Man kan f.eks. skyde på for gamle
+              filmruller, arbejde med forskellige teknikker som “lens whacking”
+              og filtre/ting foran objektivet, og man kan pille ved de kemiske
+              processer under fremkaldelse af filmen.
+            </p>
+          </div>
           <h3>Glitch art</h3>
+          <div class="w-100 sticky top-0 flex h-screen items-center">
+            <img src="img/glitch.webp" alt="glitch" />
+          </div>
           <p>
             Når der sker en teknisk fejl i et medie/en kommunikationskanal
             kaldes det en glitch. Glitch art går ud på at dyrke fejlene for at
             skabe kunst. En meget typisk glitch er små analoge eller digitale
             fejl i farvegengivelsen af billeder.
           </p>
-        </div>
-        <div>
-          <img src="img/lomografi.webp" alt="lomo" />
-          <h3>Lomografi</h3>
-          <p>
-            Et lomografi er egentlig bare et fotografi skudt uden videre
-            omtanke, og med noget foto-udstyr af ret alternativ kvalitet.
-            Lomografier skydes ofte på gode, gammeldags filmruller, men kan også
-            skyde digitalt. Det kan måske lyde lidt anti-fotograf-agtigt. Men en
-            del foto-entusiaster dyrker den slags, og ser det som en foto-genre
-            eller endda en livsstil.
-          </p>
-          <p>Lomo-regler</p>
-          <ul>
-            <li>Tag kameraet med overalt</li>
-            <li>Brug det på alle tidspunkter – dag og nat</li>
-            <li>
-              Lomografi er ikke en forstyrrelse af dit liv, men en del af det
-            </li>
-            <li>Prøv hofteskuddet!</li>
-            <li>Gå tæt på de objekter du har et ønske om at lomografere</li>
-            <li>Tænk ikke (William Firebrace)</li>
-            <li>Vær hurtig</li>
-            <li>Du behøver ikke at vide hvad du fanger på film på forhånd</li>
-            <li>Heller ikke efter</li>
-            <li>Du skal ikke bekymre dig om nogen regler</li>
-          </ul>
+          <div>
+            <h3>Lomografi</h3>
+            <div class="w-100 sticky top-0 flex h-screen items-center">
+              <img src="img/lomografi.webp" alt="lomo" />
+            </div>
+            <p>
+              Et lomografi er egentlig bare et fotografi skudt uden videre
+              omtanke, og med noget foto-udstyr af ret alternativ kvalitet.
+              Lomografier skydes ofte på gode, gammeldags filmruller, men kan
+              også skyde digitalt. Det kan måske lyde lidt anti-fotograf-agtigt.
+              Men en del foto-entusiaster dyrker den slags, og ser det som en
+              foto-genre eller endda en livsstil.
+            </p>
+            <p>Lomo-regler</p>
+            <ul>
+              <li>Tag kameraet med overalt</li>
+              <li>Brug det på alle tidspunkter – dag og nat</li>
+              <li>
+                Lomografi er ikke en forstyrrelse af dit liv, men en del af det
+              </li>
+              <li>Prøv hofteskuddet!</li>
+              <li>Gå tæt på de objekter du har et ønske om at lomografere</li>
+              <li>Tænk ikke (William Firebrace)</li>
+              <li>Vær hurtig</li>
+              <li>Du behøver ikke at vide hvad du fanger på film på forhånd</li>
+              <li>Heller ikke efter</li>
+              <li>Du skal ikke bekymre dig om nogen regler</li>
+            </ul>
+          </div>
         </div>
       </section>
 
