--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <body
     class="cursor-mincursor [&_h2]:text-beige"
   >
-  <main class="container mx-auto overflow-clip">
+  <main class="overflow-clip">
     <div class="bg-brun">
       <!-- section 1-->
       <section>
