--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
   <body class="cursor-mincursor [&_h2]:text-beige">
-    <main class="container mx-auto overflow-clip">
+    <main class="overflow-clip">
       <div class="bg-brun">
         <!-- section 1-->
         <section>
