--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
   <body class="cursor-mincursor [&_h2]:text-beige">
-    <main class="container mx-auto overflow-clip">
+    <main class="overflow-clip">
       <div class="bg-brun">
         <!-- section 1-->
         <section>
@@ -181,7 +181,7 @@
           <section id="horisontalscrollsection" class="relative h-[500vh]">
             <ul id="horisontalliste" class="sticky top-0 flex list-none">
               <li
-                class="flex h-[100vh] w-[100vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
+                class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
                   class="h-[400px] w-[600px]"
@@ -190,7 +190,7 @@
                 />
               </li>
               <li
-                class="flex h-[100vh] w-[100vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
+                class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
                   class="h-[400px] w-[600px]"
@@ -199,7 +199,7 @@
                 />
               </li>
               <li
-                class="flex h-[100vh] w-[100vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
+                class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
                   class="h-[400px] w-[600px]"
@@ -208,7 +208,7 @@
                 />
               </li>
               <li
-                class="flex h-[100vh] w-[100vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
+                class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
                   class="h-[400px] w-[600px]"
@@ -217,7 +217,7 @@
                 />
               </li>
               <li
-                class="flex h-[100vh] w-[100vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
+                class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
                   class="h-[400px] w-[600px]"
@@ -231,13 +231,15 @@
 
         <!-- section 6-->
         <section>
-          <div>
-            <div>
-              <h3 class="mx-auto w-1/2 p-10 text-xl">Analog fotografering</h3>
-              <div class="w-100 sticky top-0 flex h-screen items-center">
-                <img src="img/infoanalog.webp" alt="info" />
+          <div class="grid h-screen w-screen place-content-center">
+            <h3 class="text-4xl font-bold text-brun">Analog, glitch art, og lomografi</h3>
+          </div>
+              <div class="grid items-center sticky top-0 h-screen w-100">
+                <img src="img/infoanalog.webp" alt="info" class="w-1/2 mx-auto p-10" />
               </div>
-              <p>
+              <div class="grid items-center sticky top-0 h-screen w-100">
+                <h3 class="text-center w-1/2 mx-auto p-10 sticky  text-xl mt-28 font-bold">Analog fotografering</h3>
+              <p class="w-1/2 mx-auto sticky bg-slate-50 bg-opacity-60 mb-48 max-w-md text-sm p-5">
                 Fotografering med gode, gammeldags filmruller. Analog
                 fotografering stiger for tiden i popularitet, specielt blandt
                 unge, og prisen på filmruller og vintage-kameraer skyder i
@@ -253,22 +255,24 @@
                 pille ved de kemiske processer under fremkaldelse af filmen.
               </p>
             </div>
-            <h3>Glitch art</h3>
-            <div class="w-100 sticky top-0 flex h-screen items-center">
-              <img src="img/glitch.webp" alt="glitch" />
+            <div class="flex items-center sticky top-0 h-screen w-100">
+              <img src="img/glitch.webp" alt="glitch" class="w-1/2 mx-auto p-10" />
             </div>
-            <p>
+             <div class="grid items-center sticky top-0 h-screen w-100">
+                <h3 class="text-center w-1/2 mx-auto p-10 sticky font-bold text-xl text-beige mt-28">Glitch Art</h3>
+            <p class="w-1/2 mx-auto sticky bg-slate-50 p-5 bg-opacity-60 mb-64 max-w-md text-sm">
               Når der sker en teknisk fejl i et medie/en kommunikationskanal
               kaldes det en glitch. Glitch art går ud på at dyrke fejlene for at
               skabe kunst. En meget typisk glitch er små analoge eller digitale
               fejl i farvegengivelsen af billeder.
             </p>
-            <div>
-              <h3>Lomografi</h3>
-              <div class="w-100 sticky top-0 flex h-screen items-center">
-                <img src="img/lomografi.webp" alt="lomo" />
+          </div>
+          <div class="grid items-center sticky top-0 h-screen w-100">
+                <img src="img/lomografi.webp" alt="lomo" class="w-1/2 mx-auto p-10" />
               </div>
-              <p>
+              <div class="grid items-center sticky top-0 h-screen w-100">
+                <h3 class="w-1/2 mx-auto p-10 sticky text-xl text-center font-bold mt-28">Lomografi</h3>
+              <p class="w-1/2 mx-auto sticky bg-slate-50 p-5 bg-opacity-60 mb-64 max-w-md text-sm">
                 Et lomografi er egentlig bare et fotografi skudt uden videre
                 omtanke, og med noget foto-udstyr af ret alternativ kvalitet.
                 Lomografier skydes ofte på gode, gammeldags filmruller, men kan
@@ -276,8 +280,12 @@
                 anti-fotograf-agtigt. Men en del foto-entusiaster dyrker den
                 slags, og ser det som en foto-genre eller endda en livsstil.
               </p>
-              <p>Lomo-regler</p>
-              <ul>
+            </div>
+            <div class="flex items-center sticky top-0 h-screen w-100">
+              <h3 class="text-center w-1/2 mx-auto p-10 sticky font-bold text-xl mb-96 bg-slate-50">Lomo-regler</h3>
+            </div>
+              <ul class= "grid grid-cols-2 gap-20 list-disc w-1/2 mx-auto p-10 sticky bg-slate-50 text-sm ">
+                <div>
                 <li>Tag kameraet med overalt</li>
                 <li>Brug det på alle tidspunkter – dag og nat</li>
                 <li>
@@ -286,6 +294,8 @@
                 </li>
                 <li>Prøv hofteskuddet!</li>
                 <li>Gå tæt på de objekter du har et ønske om at lomografere</li>
+              </div>
+              <div>
                 <li>Tænk ikke (William Firebrace)</li>
                 <li>Vær hurtig</li>
                 <li>
@@ -293,9 +303,8 @@
                 </li>
                 <li>Heller ikke efter</li>
                 <li>Du skal ikke bekymre dig om nogen regler</li>
+              </div>
               </ul>
-            </div>
-          </div>
         </section>
 
         <!-- section 7-->
