--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,12 @@
   </head>
   <body
     class="cursor-mincursor"
+
   >
   <main class="overflow-clip">
-    <div class="bg-brun [&_h2]:text-beige">
+    <div class="bg-brun [&_h2]:text-beige"
+    style="background-image: url(img/background.webp);"
+    >
       <!-- section 1-->
       <section>
         <div class="container min-w-fit">
