--- a/src/index.html
+++ b/src/index.html
@@ -15,24 +15,22 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
-  <body
-    class="cursor-mincursor"
-  >
-  <main class="overflow-clip">
-    <div class="bg-brun [&_h2]:text-beige">
-      <!-- section 1-->
-      <section>
-        <div class="container min-w-fit">
-          <img
-            src="img/heroimg.webp"
-            alt="hero_img"
-            class="h-screen w-screen"
-          />
-          <h1 class="centered text-5xl font-extrabold text-brun">
-            Uperfekt er perfekt
-          </h1>
-        </div>
-      </section>
+  <body class="cursor-mincursor [&_h2]:text-beige">
+    <main class="overflow-clip">
+      <div class="bg-brun">
+        <!-- section 1-->
+        <section>
+          <div class="container min-w-fit">
+            <img
+              src="img/heroimg.webp"
+              alt="hero_img"
+              class="h-screen w-screen"
+            />
+            <h1 class="centered text-5xl font-extrabold text-brun">
+              Uperfekt er perfekt
+            </h1>
+          </div>
+        </section>
 
         <!-- section 2-->
         <section>
@@ -78,10 +76,10 @@
         <!-- section 3-->
         <section
           id="section3"
-          class="h-screen grid grid-cols-4"
+          class="h-screen bg-scroll"
           style="background-image: url(img/stockimg.webp)"
         >
-          <div class="parallaxcontainer col-start-2 col-end-4 grid-rows-3">
+          <div class="parallaxcontainer col-start-2 col-end-4">
             <p>
               Stock-fotos er billeder, der kan købes fra et foto-website. De
               bruges af aviser, til markedsføring og som indhold på websites. En
@@ -148,15 +146,14 @@
           <h2 class="text-center text-4xl font-bold">En skillevej</h2>
         </section>
       </div>
-
-      <div class="bg-beige [&_h2]:text-brun">
+      <div class="bg-beige">
         <!-- section 5-->
         <section>
-          <h2
-            class="h3inview mb-52 rotate-180 -scale-x-100 text-center text-4xl font-bold"
+          <h3
+            class="h3inview mb-52 rotate-180 -scale-x-100 text-center text-4xl font-bold text-brun"
           >
             En skillevej
-          </h2>
+          </h3>
           <p class="mb-52 leading-loose">
             Pierre tjente godt det følgende årti. Men stille og roligt begyndte
             billederne også at give ham kvalme. Han kunne ikke holde sit eget
@@ -311,15 +308,7 @@
         </section>
 
         <!-- section 7-->
-        
-        <section>
-          <div class="grid place-content-center h-screen ">
-          <h2 class="text-brun text-4xl font-bold">En ny begyndelse</h2>
-        </div>
-          <video autoplay muted loop>
-            <source src="video14sec.mp4"  type="video/mp4">
-          </video>
-        </section>
+        <section></section>
       </div>
 
       <script type="module" src="./main.js"></script>
