--- a/src/index.html
+++ b/src/index.html
@@ -135,10 +135,12 @@
             de store, etablerede spillere på markedet holdt lidt igen. Pierre så
             det for sig:
           </p>
-          <h3 class="mt-32 mb-32 text-center text-lg italic text-beige">
+          <div class="mx-auto scrollzoom overflow-clip scrollzoomimg2 w-full">
+          <h3 class="mt-32 mb-32 text-center text-lg italic text-beige scrollzoom2">
             “Om ganske få år er hele branchen digital, og dem der ikke hopper
             med på den digitale vogn, lukker.”
           </h3>
+        </div>
           <p class="mb-52 text-beige">
             Så Pierre gav sig selv en udfordring: At blive landets bedst
             sælgende stock-fotograf. Pierre lejede et gammelt, billigt
@@ -156,7 +158,7 @@
         <!-- section 5-->
         <section>
           <h2
-            class="h3inview mb-52 rotate-180 -scale-x-100 text-center text-4xl font-bold"
+            class="mb-52 rotate-180 -scale-x-100 text-center text-4xl font-bold"
           >
             En skillevej
           </h2>
@@ -167,9 +169,9 @@
             fotos. Noget han kunne lave med stolthed. Pierre bestluttede sig for
             at droppe stock-fotos, og vende tilbage til rødderne.
           </p>
-          <div class="grid grid-cols-2">
-            <img src="img/enskillevej1.webp" alt="img1" />
-            <img src="img/enskillevej2.webp" alt="img2" />
+          <div class="grid grid-cols-2 mx-auto scrollzoom overflow-clip scrollzoomimg w-full">
+            <img src="img/enskillevej1.webp" alt="img1" class="scrollzoom w-full"/>
+            <img src="img/enskillevej2.webp" alt="img2" class="scrollzoom w-full"/>
           </div>
           <p class="leading-loose">
             Han søgte inspiration i analog fotografering, i Lomo-bevægelsen,
